--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -23065,7 +23065,7 @@ video {
 
 /* Hide scrollbar for IE, Edge and Firefox */
 
-.main-container {
+.list-container {
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
 }
